<resources>
    <string name="app_name">Save My Planet</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Save my Planet</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Scan Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_home">Home</string>
    <string name="history_list_empty">No scanned products available&#8230;</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_history">History</string>
    <string name="environment">Environment</string>
    <string name="no_palm_oil">Don\'t contain palm oil</string>
    <string name="contain_palm_oil">Contain palm oil</string>
    <string name="may_contain_palm_oil">May contain palm oil</string>
    <string name="nutri_score">Nutri-Score:</string>
    <string name="health">Health</string>
    <string name="ingredients">Ingredients</string>
    <string name="scan">scan</string>
    <string name="product_no_found">Product not found</string>
    <string name="barcode_no_found">Unknown barcode</string>
    <string name="product_picture">Product picture</string>
    <string name="close_window">close window</string>
    <string name="brand">brand</string>
    <string name="separation">&#160;-&#160;</string>
    <string name="quantity">quantity</string>
    <string name="quality">quality</string>
    <string name="product_name">Product name</string>
    <string name="exit">exit</string>
    <string name="category">Category</string>
    <string name="with_palm_oil">With palm oil</string>
    <string name="without_palm_oil">Without palm oil</string>
    <string name="information">Information</string>
    <string name="watch_video">Watch video</string>
    <string name="donate">Donate</string>
    <string name="petitions">Petitions</string>
    <string name="not_specified">Not specified</string>
    <string name="url_resource">https://www.freeiconspng.com/uploads/no-image-icon-15.png</string>
    <string name="product_saved">Product saved!</string>
    <string name="dismiss">Dismiss</string>
    <string name="go_back">Return</string>
    <string name="product_detail">Product detail</string>
    <string name="unable_to_start_camera_source">Unable to start camera source.</string>
    <string name="text_helper">Put the barcode inside the white square</string>

</resources>
