<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGrey"
    android:padding="3dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/item_product_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="4dp"
                android:src="@drawable/no_picture" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/item_product_picture"
                android:layout_toRightOf="@id/item_product_picture"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/item_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/item_product_brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brand"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/separation"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/item_product_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textSize="12sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/item_product_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/quality"
                    android:textColor="@color/colorBlack"
                    android:textSize="13sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:src="@drawable/ic_arrow_right" />

            <!--TEST-->
            <TextView
                android:id="@+id/test_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_product_picture"
                android:text="test"
                android:textSize="20sp"
                android:visibility="gone"
                android:layout_gravity="bottom|center"/>
        </RelativeLayout>



    </android.support.v7.widget.CardView>


</RelativeLayout>


