<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/test"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    android:translationX="600dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/product_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_brand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_layout_name"
            android:layout_margin="8dp"
            android:hint="@string/brand">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_product_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:id="@+id/radio_group"
            style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_layout_brand"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="100">

            <RadioButton
                android:id="@+id/button_without"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/without_palm_oil" />

            <RadioButton
                android:id="@+id/button_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/with_palm_oil" />

        </RadioGroup>

        <ImageButton
            android:id="@+id/validate_search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/radio_group"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:background="@drawable/round_shape"
            android:src="@drawable/ic_validate" />

    </RelativeLayout>

</android.support.v7.widget.CardView>

