<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSoftGrey"
        tools:context=".controlers.fragments.Dashboard">

        <!--Carousel-->
        <ViewSwitcher
            android:id="@+id/viewSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <!--External library-->
            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/presentation1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/family_apes" />

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/presentation2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/orangutan_tree" />

        </ViewSwitcher>


        <!--Grid Layout-->
        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/viewSwitcher"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            app:columnCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewSwitcher"
            app:rowCount="2"
            app:useDefaultMargins="true">

            <!--Information-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_one"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/colorSoftGrey"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp"
                app:cardMaxElevation="2dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorLightBlue">

                    <ImageView
                        android:id="@+id/information"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:src="@drawable/knowledge" />

                    <TextView
                        android:id="@+id/information_description"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/transparent_foreground"
                        android:gravity="center"
                        android:text="@string/information"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <!--Video-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_two"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp"
                app:cardMaxElevation="2dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorRed">

                    <ImageView
                        android:id="@+id/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:src="@drawable/youtube" />

                    <TextView
                        android:id="@+id/youtube_description"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/transparent_foreground"
                        android:gravity="center"
                        android:text="@string/watch_video"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <!--Donation-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_three"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp"
                app:cardMaxElevation="2dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:id="@+id/donate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:src="@drawable/heart" />

                    <TextView
                        android:id="@+id/donate_description"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/transparent_foreground"
                        android:gravity="center"
                        android:text="@string/donate"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <!--Petition-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_four"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp"
                app:cardMaxElevation="2dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:id="@+id/petition"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center"
                        android:src="@drawable/petition" />

                    <TextView
                        android:id="@+id/petition_description"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/transparent_foreground"
                        android:gravity="center"
                        android:text="@string/petitions"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </android.support.v7.widget.GridLayout>

    </android.support.constraint.ConstraintLayout>
</layout>
