<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <import type="android.view.View" />

        <import type="com.leothos.savemyplanet.utils.BusinessLogic" />

        <variable
            name="openFoodFact"
            type="com.leothos.savemyplanet.models.OpenFoodFact" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controlers.activities.DetailProductActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            android:text="@string/product_detail"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/colorWhite" />

        <!--View to handle background task-->
        <android.support.v7.widget.CardView
            android:id="@+id/cardviewLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            app:cardElevation="6dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/no_found_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/monkey_scratch"
                android:visibility="gone" />

        </android.support.v7.widget.CardView>


        <!--Main view-->
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSoftGrey"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Product presentation-->
                <android.support.v7.widget.CardView
                    android:id="@+id/cardview1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="4dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp">


                        <ImageView
                            android:id="@+id/product_picture"
                            android:layout_width="95dp"
                            android:layout_height="95dp"
                            app:imageUrl="@{openFoodFact.getProduct.getImageFrontUrl}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/product_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:maxLines="2"
                            android:text="@{openFoodFact.getProduct.getProductName}"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/product_picture"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/product_brand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@{openFoodFact.getProduct.getBrands}"
                            android:textStyle="italic"
                            app:layout_constraintStart_toEndOf="@+id/product_picture"
                            app:layout_constraintTop_toBottomOf="@+id/product_name" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:text="@{openFoodFact.getProduct.getQuantity}"
                            android:textSize="13sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/product_picture"
                            app:layout_constraintTop_toBottomOf="@+id/product_brand" />

                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

                <!--Environment-->
                <TextView
                    android:id="@+id/environment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardview1"
                    android:padding="5dp"
                    android:text="@string/environment"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorBlack" />

                <android.support.v7.widget.CardView
                    android:id="@+id/cardview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/environment"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="4dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/oil_palm_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@{BusinessLogic.getStatusText(openFoodFact.getProduct.getIngredientsFromPalmOilN, @string/no_palm_oil, @string/may_contain_palm_oil, @string/contain_palm_oil)}"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/oil_palm_image"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:src="@{BusinessLogic.getStatusDrawable(openFoodFact.getProduct.getIngredientsFromPalmOilN, @drawable/ic_green_alert, @drawable/ic_warning_alert, @drawable/ic_red_alert)}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/health"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardview2"
                    android:padding="5dp"
                    android:text="@string/health"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorBlack" />

                <!--Health care-->
                <android.support.v7.widget.CardView
                    android:id="@+id/cardview3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/health"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="4dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/nutri_score"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/nutri_score_image"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:src="@{BusinessLogic.getNutriScore(openFoodFact.getProduct.getNutritionGrades, @drawable/nutriscore_a,@drawable/nutriscore_b,@drawable/nutriscore_c,@drawable/nutriscore_d,@drawable/nutriscore_e)}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardview3"
                    android:padding="5dp"
                    android:text="@string/ingredients"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorBlack" />

                <!--Ingredients-->
                <android.support.v7.widget.CardView
                    android:id="@+id/cardview4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/ingredients"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="4dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/ingredient_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{openFoodFact.getProduct.getIngredientsTextFr}"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </ScrollView>

    </LinearLayout>

</layout>
